# photogenic

./: .gitignore  Cargo.toml  LICENSE  index.html  index.js  package-lock.json  package.json  tree.txt  webpack.config.js
public/styles/: style.css
src/: lib.rs  main.rs  photogenic.rs
static/: index.html  index.js
static/css/: style.css
www-old/: index.js  package-lock.json  package.json
