[package]
name = "photogenic"
version = "0.1.0"
authors = ["Mahdi Khodabandeh <42507906+khoda81@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
color_space = "0.5.3"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.66"
rand = "0.8.5"
getrandom = { version = "0.2.11", features = ["js"] }

[dependencies.web-sys]
version = "0.3.4"
features = ['ImageData', 'CanvasRenderingContext2d']

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "s"

[profile.dev]
opt-level = 3
